@@ -1,3 +1,15 @@
+1999-10-01  Kevin Buettner <kevinb@cygnus.com>
+
+	* gdb.base/break.c (main): Added a statement that we can step
+	off of.
+	* gdb.base/break.exp: Added tests for setting a breakpoint
+	at an offset and stepping onto a breakpoint.
+
+1999-10-01  Fred Fish  <fnf@cygnus.com>
+
+	* gdb.base/help.exp (help add-symbol-file): Update to match current 
+	gdb output.
+
 1999-09-18  Jim Blandy  <jimb@cris.red-bean.com>
 
 	* gdb.base/break.exp: Code locations are in hex, don't forget!
